--- a/config/user.cnf
+++ b/config/user.cnf
@@ -1,4 +1,6 @@
 [mysqld]
+disable_log_bin
+max_connections=28000
 # Needed for compatibility with existing SQL clients / WordPress.
 default-authentication-plugin=mysql_native_password
 
